Updated CSS for Fixed so there is no overlap

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -104,7 +104,7 @@ main > .row {
 	background: white;
 }
 .second-section{
-	padding: 0;
+	padding: 0 0 40px;
 	margin: 0;
 }
 footer {
